--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "description": "",
   "dependencies": {
     "axios": "^1.11.0",
+    "backend": "^0.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1",
     "node-cron": "^4.2.1",
+    "openai": "^5.16.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
